--- a/fitted.html
+++ b/fitted.html
@@ -82,9 +82,9 @@
             <h3 class="f5 f5-ns ttu mt4 mb0 black-90 sourceserif">Tools Used</h3>
             <h3 class="f6 f5-ns fw4 mt2 black-60 worksans">Illustrator, Invision</h3>
           </div>
-          <div>
+          <!-- <div>
             <a class="f6 fw6 ttu mt4 mb0 pv2 ph3 bg-white dib shadow no-underline mid-gray worksans link ba b--black-05 br2 hover-white bg-animate hover-bg-green" href="#0" target="_blank">Read Case Study</a>
-          </div>
+          </div> -->
         </span>
       </article>
     </section>
@@ -117,12 +117,12 @@
           <h3 class="f6 f5-ns fw4 mt2 black-60 worksans lh-copy">Fitted aims to give you the confidence in finding the right-sized clothes with accurate body measurements in order to provide you with personalized sizing recommendations. Users can browse styles from their favorite brands and be given accurate sizing suggestions tailored to their preferences and/or needs.</h3>
         </span>
 
-        <div class="bl b--orange bw2 pl2 o-70 mv4-ns">
+        <div class="bl b--orange bw2 pl2 o-70 mv3 mv4-ns">
           <h3 class="f5 f4-ns fw3 mb0 orange sourceserif lh-copy">Poor organization of space & limited guidance led to confused users, which led to low retention rate and a lacking experience.</h3>
         </div>
 
         <section class="fullest-container">
-          <img class="w-100 br2 shadow" src="images/teamiteration.png"/>
+          <img class="w-100 br2 shadow" src="images/fitted-screens.png"/>
         </section>
         <span class="ph2 ph0-ns pb3 link db tc">
           <h3 class="f6 fw4 mt2 black-60 worksans">Iterations: transitioning from 3-columns to 2-columns</h3>
@@ -169,7 +169,7 @@
       </article>
 
       <section class="fullest-container">
-        <img class="w-100 br2 shadow" src="images/teamiteration.png"/>
+        <img class="w-100" src="images/fitted-body.png"/>
       </section>
     </section>
 
@@ -182,7 +182,7 @@
       </article>
 
       <section class="fullest-container">
-        <img class="w-100 br2 shadow" src="images/swap-2.png"/>
+        <img class="w-100" src="images/fitted-process.png"/>
       </section>
 
       <!-- BODY PREFERENCES -->
@@ -196,13 +196,21 @@
         </span>
       </article>
 
-      <section class="fullest-container">
-        <img class="w-100 br2 shadow" src="images/teamconstraint.png"/>
-      </section>
+      <article class="fl w-third-m w-third-ns pa2-ns">
+        <section class="fullest-container">
+        </section>
+      </article>
 
-      <span class="ph2 ph0-ns pb3 link db tc">
-        <h3 class="f6 fw4 mt2 black-60 worksans">Don't mind the varying modal sizes...</h3>
-      </span>
+      <article class="fl w-100 w-third-m w-third-ns pa2-ns">
+        <section class="fullest-container">
+          <img class="w-100" src="images/fitted-editProf.gif"/>
+        </section>
+      </article>
+
+      <article class="fl w-third w-third-m w-third-ns pa2-ns">
+        <section class="fullest-container">
+        </section>
+      </article>
     </section>
 
     <section class="cf w-100 ph3 ph4-m ph5-l mw8 center">
@@ -211,9 +219,9 @@
         <span class="ph2 ph0-ns db">
           <h3 class="f4 f3-ns mb0 black-90 sourceserif">Takeaways</h3>
           <h3 class="f6 f5-ns fw4 mt2 black-60 worksans lh-copy">
-            The idea came from an issue we each saw every time we bought clothes online. It seemed more often than not the ease of online shopping was overshadowed by the challenge of finding the right size. It’s hard to know what fits best when there is so much variation in sizing across different brands.
+            This project was a great opportunity to get more experience in product design. I've had a lot of exposure within the realm of user experience design, but being able to take into account additional stakeholders beyond the end-user was definitely a challenge.
             <br/><br/>
-            People could choose to estimate their size, and then deal with returning clothes if they do not fit. Or, people could spend hours in fitting room. But who really wants to be spending their time doing that?</h3>
+            I learned quickly how often a design decision can pivot in the scope of try to scale and work within a business model. Design easily extends beyond user interaction and it is our job as designers be aware of that.</h3>
         </span>
       </article>
     </section>
