--- a/illustrations.html
+++ b/illustrations.html
@@ -10,7 +10,7 @@
     <script>
       $(window).scroll(function() {
           var nav = $('header');
-          var top = 400;
+          var top = 75;
           if ($(window).scrollTop() >= top) {
 
               nav.addClass('shadow bg-almost-white');
@@ -26,17 +26,17 @@
     <header class="fixed w-100 ph3 pv3 pv4-ns ph4-m ph5-l zindex worksans">
       <nav class="f5-ns f6">
         <div class="fl">
-          <a class="link hover-white black dib mr3 ttu fw6" href="index.html" title="Home">Alex Tran</a>
+          <a class="link hover-orange black dib mr3 ttu fw6" href="index.html" title="Home">Alex Tran</a>
         </div>
         <div class="fr">
-          <a class="link hover-white black dib mr3" href="about.html" title="Hi, it me &#128075;">About</a>
-          <a class="link hover-white black dib mr3" href="#" title="Will open Mail or Outlook &#128231;">Contact</a>
-          <a class="link hover-white black dib" href="AlexWTran_Resume.pdf" target="_blank" title="Peep my resume">Resume</a>
+          <a class="link hover-orange black dib mr3" href="about.html" title="Hi, it me &#128075;">About</a>
+          <a class="link hover-orange black dib mr3" href="#" title="Will open Mail or Outlook &#128231;">Contact</a>
+          <a class="link hover-orange black dib" href="AlexWTran_Resume.pdf" target="_blank" title="Peep my resume">Resume</a>
         </div>
       </nav>
     </header>
 
-    <section class="worksans dt w-100 ph4-ns pv4 pv6-ns ph0-l center bg-gold">
+    <section class="worksans dt w-100 ph4-ns pv4 pv6-ns ph0-l center">
       <div class="cover bg-left bg-center-l">
         <!-- HERO LANDING -->
         <div class="tc pa4 sourceserif">
