--- a/index.html
+++ b/index.html
@@ -113,28 +113,28 @@
 
     <section class="cf pv2 w-100 mw8 center">
       <article class="fl w-100 w-50-m w-50-ns pa3 pa2-ns">
-        <a href="dribbblification.html">
-          <div class="aspect-ratio aspect-ratio--4x3 dim point">
+        <a href="#0.html" class="disabled">
+          <div class="aspect-ratio aspect-ratio--4x3 point">
             <img style="background-image:url(images/dribbble.png);"
             class="db bg-center cover aspect-ratio--object" />
           </div>
         </a>
         <span class="ph2 ph0-ns pb3 link db">
-          <h3 class="f4 f3-ns mb0 black-90 sourceserif">Dribbblification</h3>
-          <h3 class="f6 f5-ns fw4 mt2 black-60 worksans">Improving the way designers get feedback on their work</h3>
+          <h3 class="f4 f3-ns mb0 black-90 sourceserif">Dribbblification (WIP)</h3>
+          <h3 class="f6 f5-ns fw4 mt2 black-60 worksans lh-copy">Improving the way designers get feedback on their work; coming soon</h3>
         </span>
       </article>
 
       <article class="fl w-100 w-50-m w-50-ns pa3 pa2-ns">
-        <a href="overwatch.html">
-          <div class="aspect-ratio aspect-ratio--4x3 dim point">
+        <a href="#0.html" class="disabled">
+          <div class="aspect-ratio aspect-ratio--4x3 point">
             <img style="background-image:url(images/overwatch.png);"
             class="db bg-center cover aspect-ratio--object" />
           </div>
         </a>
         <span class="ph2 ph0-ns pb3 link db">
-          <h3 class="f4 f3-ns mb0 black-90 sourceserif">Overwatch Team Builds</h3>
-          <h3 class="f6 f5-ns fw4 mt2 black-60 worksans">Because no one wants to play with an unbalanced team</h3>
+          <h3 class="f4 f3-ns mb0 black-90 sourceserif">Overwatch Team Builds (WIP)</h3>
+          <h3 class="f6 f5-ns fw4 mt2 black-60 worksans lh-copy">Because no one wants to play with an unbalanced team; coming soon</h3>
         </span>
       </article>
     </section>
