Added case study for Teammatic

--- a/teammatic.html
+++ b/teammatic.html
@@ -83,7 +83,7 @@
           </div>
           <div>
             <a class="f6 fw6 ttu mt4 mb0 pv2 ph3 bg-white dib shadow ba b--black-05 br2 no-underline mid-gray worksans link hover-white bg-animate hover-bg-orange" href="https://invis.io/JZCWS2XNQ" target="_blank">Invision</a>
-            <a class="f6 fw6 ttu mt4 mb0 pv2 ph3 bg-white dib shadow no-underline mid-gray worksans link ba b--black-05 br2 hover-white bg-animate hover-bg-green" href="#0" target="_blank">Read Case Study</a>
+            <a class="f6 fw6 ttu mt4 mb0 pv2 ph3 bg-white dib shadow no-underline mid-gray worksans link ba b--black-05 br2 hover-white bg-animate hover-bg-green" href="https://medium.com/@alextrantheeman/teammatic-ux-ui-case-study-of-a-team-formation-tool-30b594b17239" target="_blank">Read Case Study</a>
           </div>
         </span>
       </article>
