Almost complete: left is Oppia

--- a/oppia.html
+++ b/oppia.html
@@ -90,7 +90,7 @@
           </div>
           <div>
             <a class="f6 fw6 ttu mt4 mb0 pv2 ph3 bg-white dib shadow ba b--black-05 br2 no-underline mid-gray worksans link hover-white bg-animate hover-bg-orange" href="http://oppia.org" target="_blank">Visit Site</a>
-            <a class="f6 fw6 ttu mt4 mb0 pv2 ph3 bg-white dib shadow no-underline mid-gray worksans link ba b--black-05 br2 hover-white bg-animate hover-bg-green" href="#0" target="_blank">Read Case Study</a>
+            <!-- <a class="f6 fw6 ttu mt4 mb0 pv2 ph3 bg-white dib shadow no-underline mid-gray worksans link ba b--black-05 br2 hover-white bg-animate hover-bg-green" href="#0" target="_blank">Read Case Study</a> -->
           </div>
         </span>
       </article>
@@ -103,7 +103,34 @@
     </div>
 
     <section class="fullest-container">
-      <img class="w-100" src="images/upcominglanding-2.png" />
+      <img class="w-100" src="images/oppia-main2.png" />
+    </section>
+
+    <section class="cf w-100 ph3 ph4-m ph5-l mw8 center">
+      <article class="fl w-100-ns">
+        <span class="ph2 ph0-ns db">
+          <h3 class="f4 f3-ns mb0 black-90 sourceserif">Design Iteration</h3>
+          <h3 class="f6 f5-ns fw4 mt2 black-60 worksans lh-copy">Oppia engages your student as an active participant in the learning process, providing targeted feedback to help improve where they needs it most. Among one of the ways Oppia provides that feedback is in the form of the hint feature. In its current existence, usage of the hint button is unclear to users.</h3>
+        </span>
+
+        <div class="bl b--orange bw2 pl2 o-70 mv3 mv4-ns">
+          <h3 class="f5 f4-ns fw3 mb0 orange sourceserif lh-copy">How might we improve the language and functionality of the hint feature to make it more universal/intuitive to understand?</h3>
+        </div>
+
+        <section class="fullest-container">
+          <img class="w-100 br2 shadow" src="images/oppia-wireframes.png"/>
+        </section>
+        <span class="ph2 ph0-ns pb3 link db tc">
+          <h3 class="f6 fw4 mt2 black-60 worksans">Wireframes: deviating from the current UX</h3>
+        </span>
+
+        <section class="fullest-container">
+          <img class="w-100 br2 shadow" src="images/oppia-wireframes2.png"/>
+        </section>
+        <span class="ph2 ph0-ns pb3 link db tc">
+          <h3 class="f6 fw4 mt2 black-60 worksans">Addressing the key issues of visibility and functionality</h3>
+        </span>
+      </article>
     </section>
 
     <!-- FIRST ROW -->
@@ -111,8 +138,14 @@
       <!-- HAMBURGER PIECE -->
       <article class="fl w-100 w-50-m w-100-ns">
         <span class="ph2 ph0-ns pb3 db">
-          <h3 class="f4 f3-ns mb0 black-90 sourceserif">Another Podcast?</h3>
-          <h3 class="f6 f5-ns fw4 mt2 black-60 worksans">My response to the Apple + Google &#127828; debate</h3>
+          <h3 class="f4 f3-ns mb0 black-90 sourceserif">More to come</h3>
+          <h3 class="f6 f5-ns fw4 mt2 black-60 worksans lh-copy">
+            Improving the Hints feature was just one small redesign I've had a chance to work on. Among others not yet shared are improving the lesson progression experience as well as working towards an improved design system.
+            <br /><br />
+            Case study currently in progress.
+            <br /><br />
+            Oh, and what I really like about Oppia is it gives me the opportunity to work and learn from users all over the world. Our usability tests are conducted with students from India to Ohio and each session brings more insight into how lessons should be organized.
+          </h3>
         </span>
       </article>
     </section>
