Fixed WIP links

--- a/thinkabit.html
+++ b/thinkabit.html
@@ -222,7 +222,7 @@
           <a class="f5 fw6 ttu mt1 mb0 pv2 ph3 bg-white dib shadow no-underline black-90 worksans link ba b--black-05 br2 ttu hover-white bg-animate hover-bg-orange" href="fitted.html" title="Fitted">&#128072; Back</a>
         </span>
         <span class="fr ph2 ph0-ns db">
-          <a class="f5 fw6 ttu mt1 mb0 pv2 ph3 bg-white dib shadow no-underline black-90 worksans link ba b--black-05 br2 ttu hover-white bg-animate hover-bg-orange" href="dribbblification.html" title="Dribbblification">Next &#128073;</a>
+          <a class="f5 fw6 ttu mt1 mb0 pv2 ph3 bg-white dib shadow no-underline black-90 worksans link ba b--black-05 br2 ttu hover-white bg-animate hover-bg-orange" href="upcoming.html" title="Up+Coming">Next &#128073;</a>
         </span>
       </article>
     </section>
