--- a/overwatch.html
+++ b/overwatch.html
@@ -30,7 +30,7 @@
         </div>
         <div class="fr">
           <a class="link hover-orange black dib mr3" href="about.html" title="Hi, it me &#128075;">About</a>
-          <a class="link hover-orange black dib mr3" href="#" title="Will open Mail or Outlook &#128231;">Contact</a>
+          <a class="link hover-orange black dib mr3" href="mailto:awtran16@gmail.com?Subject=Hello!" target="_top"" title="Will open Mail or Outlook &#128231;">Contact</a>
           <a class="link hover-orange black dib" href="AlexWTran_Resume.pdf" target="_blank" title="Peep my resume">Resume</a>
         </div>
       </nav>
