fixed homepage grid

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         </div>
         <div class="fr">
           <a class="link hover-orange black dib mr3" href="about.html" title="Hi, it me &#128075;">About</a>
-          <a class="link hover-orange black dib mr3" href="mailto:awtran16@gmail.com?Subject=Hello!" target="_top"" title="Will open Mail or Outlook &#128231;">Contact</a>
+          <a class="link hover-orange black dib mr3" href="mailto:awtran16@gmail.com?Subject=Hello!" target="_top" title="Will open Mail or Outlook &#128231;">Contact</a>
           <a class="link hover-orange black dib" href="AlexWTran_Resume.pdf" target="_blank" title="Peep my resume">Resume</a>
         </div>
       </nav>
@@ -77,7 +77,9 @@
           <h3 class="f6 f5-ns fw4 mt2 black-60 worksans">Constraint-based UI tool for team formation</h3>
         </span>
       </article>
+    </section>
 
+    <section class="cf pv2 w-100 mw8 center">
       <article class="fl w-100 w-50-m w-50-ns pa3 pa2-ns">
         <a href="fitted.html">
           <div class="aspect-ratio aspect-ratio--4x3 dim point">
