Fixed about interest layout

--- a/about.html
+++ b/about.html
@@ -86,46 +86,66 @@
       </div>
     </div>
 
-    <section class="cf pv2 w-100 ph3 pv3 pv4-ns ph4-m ph5-l mw8 center">
+    <section class="cf w-100 ph3 pt3 pt4-ns ph4-m ph5-l mw8 center">
       <h3 class="f4 f3-ns mb4 black-90 sourceserif tc">Interests of mine</h3>
       <!-- DOG INTERESTS -->
       <article class="fl w-100 w-50-m w-50-ns pa1 ph5-ns">
-        <span class="ph2 ph0-ns pb1 link db">
+        <span class="ph2 ph0-ns db">
           <h3 class="f6 f5-ns fw4 mt1 worksans lh-copy"><span class="fw6 black-90">Dogs &amp; more dogs</span><br />Love 'em to death. The sad irony being that I never actually owned a pet.</h3>
         </span>
       </article>
 
       <!-- COFFEE INTERESTS -->
       <article class="fl w-100 w-50-m w-50-ns pa1 ph5-ns">
-        <span class="ph2 ph0-ns pb1 link db">
+        <span class="ph2 ph0-ns db">
           <h3 class="f6 f5-ns fw4 mt1 worksans lh-copy"><span class="fw6 black-90">My mornin' Joe</span><br />This shouldn't come as a surprise to really anyone. Love me a cold brew.</h3>
         </span>
       </article>
+    </section>
 
+    <section class="cf w-100 ph3 ph4-m ph5-l mw8 center">
       <!-- FITNESS INTERESTS -->
       <article class="fl w-100 w-50-m w-50-ns pa1 ph5-ns">
-        <span class="ph2 ph0-ns pb1 link db">
+        <span class="ph2 ph0-ns db">
           <h3 class="f6 f5-ns fw4 mt1 worksans lh-copy"><span class="fw6 black-90">Fitness n' health</span><br />"Deadlifts and [maple vegan] donuts" is a go-to phrase for me.</h3>
         </span>
       </article>
 
       <!-- GAMING INTERESTS -->
       <article class="fl w-100 w-50-m w-50-ns pa1 ph5-ns">
-        <span class="ph2 ph0-ns pb1 link db">
+        <span class="ph2 ph0-ns db">
           <h3 class="f6 f5-ns fw4 mt1 worksans lh-copy"><span class="fw6 black-90">Videogames</span><br />Appealing to the adolescent in me. Find me on PS4: gcOverlord.</h3>
         </span>
       </article>
+    </section>
 
+    <section class="cf w-100 ph3 ph4-m ph5-l mw8 center">
+      <!-- BIKING INTERESTS -->
+      <article class="fl w-100 w-50-m w-50-ns pa1 ph5-ns">
+        <span class="ph2 ph0-ns db">
+          <h3 class="f6 f5-ns fw4 mt1 worksans lh-copy"><span class="fw6 black-90">Riding my fixie</span><br />Bad for the knees, but oh so totally worth it. Ask me in 30 years though.</h3>
+        </span>
+      </article>
+
+      <!-- GAMING INTERESTS -->
+      <article class="fl w-100 w-50-m w-50-ns pa1 ph5-ns">
+        <span class="ph2 ph0-ns db">
+          <h3 class="f6 f5-ns fw4 mt1 worksans lh-copy"><span class="fw6 black-90">Community</span><br />Both the value and the TV show. Cool, cool cool cool.</h3>
+        </span>
+      </article>
+    </section>
+
+    <section class="cf pb3 pb4-ns w-100 ph3 ph4-m ph5-l mw8 center">
       <!-- CODING INTERESTS -->
       <article class="fl w-100 w-50-m w-50-ns pa1 ph5-ns">
-        <span class="ph2 ph0-ns pb1 link db">
+        <span class="ph2 ph0-ns db">
           <h3 class="f6 f5-ns fw4 mt1 worksans lh-copy"><span class="fw6 black-90">if (codingInterest == true)</span><br />learningToCode(spareTime); else readAboutCoding(spareTime);</h3>
         </span>
       </article>
 
       <!-- FOOD INTERESTS -->
       <article class="fl w-100 w-50-m w-50-ns pa1 ph5-ns">
-        <span class="ph2 ph0-ns pb1 link db">
+        <span class="ph2 ph0-ns db">
           <h3 class="f6 f5-ns fw4 mt1 worksans lh-copy"><span class="fw6 black-90">Heading to Flavortown</span><br />You can steal my heart with a good charcuterie board.</h3>
         </span>
       </article>
